- Added XDocumentExtensions.cs to convert XDocument to String but with the ability to specify any Encoding.
- Refactored OpenSearchService and SitemapService to use XDocumentExtensions instead of containing duplicated code.
- SitemapPingerService updated to remove async keyword in Debug mode, to get around a compiler warning about using the async keyword without awaiting anything.

Version 1.0.43
- Glimpse path moved back to /glimpse.axd as the path was no longer working due to a Elmah bug workaround.

Version 1.0.42
- Added the FriendlyUrlHelper to help create SEO and human friendly URL's.
- Added a note to ReadMe.html to use the FriendlyUrlHelper to create SEO and human friendly URL's.
- Removed IgnoreRoute statements for Elmah and Glimpse. It turns out you don't need these.

Version 1.0.41
- RedirectToHttpsAttribute set to Compile, rather than Content.

Version 1.0.40
- Corrected thumbnail size in FeedService.cs.

Version 1.0.39
- Fixed the 'Learn More' link to ASP.NET MVC Boilerplate in Index.cshtml.
- Added a note about session state in Web.config file.

Version 1.0.38
- Added /content/icons/atom-icon-48x48.png and /content/icons/atom-icon-96x48.png for Atom 1.0 feed images.
- Changed the images referred to in FeedService.cs to point to the above images.
- Added in a default MapRoute in RouteConfig to work around a Elmah/Elmah.MVC bug.
- enablePrefetchOptimization set to true in Web.config for better startup performance of the site.
- Note added to ReadMe.html about enabling the prefetcher in Windows Server for the enablePrefetchOptimization setting to work.
- Added comments in Web.config for the <compilation/> element.
- Added <requestLimits maxAllowedContentLength="1048576" maxQueryString="2048" maxUrl="4096" /> to the Web.config as well as comments.
- Added similar settings to the <httpRuntime element in the Web.config with comments.
- Added a note to ReadMe.html to edit the requestLimits and httpRuntime settings for better security.

Version 1.0.37