@@ -14,6 +14,9 @@
 - Added XDocumentExtensions.cs to convert XDocument to String but with the ability to specify any Encoding.
 - Refactored OpenSearchService and SitemapService to use XDocumentExtensions instead of containing duplicated code.
 - SitemapPingerService updated to remove async keyword in Debug mode, to get around a compiler warning about using the async keyword without awaiting anything.
+- FilterConfig.cs changes courtesy of Omid:
+	- Changed example.com to *.example.com.
+	- Used a string.Join rather than string.Format to create the custom sources for CDN's.
 
 Version 1.0.43
 - Glimpse path moved back to /glimpse.axd as the path was no longer working due to a Elmah bug workaround.
